<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    tools:context=".ui.payment.PaymentFragment">

    <TextView
        android:id="@+id/payment_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:text="@string/payment_title"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
        <EditText
            android:id="@+id/payment_cpf"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:autofillHints="name"
            android:hint="@string/payment_cpf_hint"
            android:inputType="number" />

        <EditText
            android:id="@+id/payment_numero_cartao"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:autofillHints="creditCardNumber"
            android:hint="@string/payment_numero_cartao_hint"
            android:inputType="number" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginTop="10dp"
            android:text="@string/payment_bandeira_hint"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2" />

        <br.uva.habitos.util.MultiSpinner
            android:id="@+id/payment_bandeira"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="name" />

        <EditText
            android:id="@+id/payment_nome_titular"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:autofillHints="name"
            android:hint="@string/payment_nome_titular_hint"
            android:inputType="text" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <EditText
                android:id="@+id/payment_validade_cartao"
                android:layout_width="180dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:autofillHints="creditCardExpirationDate"
                android:hint="@string/payment_validade_cartao_hint"
                android:inputType="number" />

            <EditText
                android:id="@+id/payment_codigo_cartao"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:autofillHints="creditCardSecurityCode"
                android:hint="@string/payment_codigo_cartao_hint"
                android:inputType="number" />
        </LinearLayout>

        <CheckBox
            android:id="@+id/payment_remember"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/payment_remember" />
    </LinearLayout>

    <Button
        android:id="@+id/payment_button"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="25dp"
        android:text="@string/payment_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>